maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: not enough arguments for method keepHandOnSideWall: (s: Int)Int.
Unspecified value parameter s.
                    {keepHandOnSideWall()};prendBiscuit()
                                       ^