maze.wallfollower.WallFollowerMaze.scala.code
override def run() {while (!estSurBiscuit())
                    {keepHandOnSideWall()};prendBiscuit()

}

def keepHandOnSideWall(s:Int): Int = {gauche ();
                          if (!estFaceMur())
                              {avance();return(s+1)}
                          droite();
                          if (!estFaceMur())
                              {avance;return(s)};
                          droite();
                          return(s-1);}